# Garuda-openagent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CONFIG_SCALABILITY_PLAN.md  ENGINEERING_PLAN.md  GARUDA_OPEN_AGENT_RFC.md  MODULES.md  REVIEW_FINDINGS.md
garuda/: __init__.py  types.py
garuda/agents/: __init__.py  frontmatter.py  loader.py  md_loader.py  setup.py
garuda/agents/defaults/: build.yaml  explore.yaml  harbor.yaml  plan.yaml  reviewer.md
garuda/config/: __init__.py  agent_home.py  recipes.py
garuda/config/defaults/: fix-and-test.yaml
garuda/context/: __init__.py  condenser.py  manager.py  shaper.py  summarizer.py
garuda/core/: bootstrap.py  buffer.py  events.py  loop.py  permissions.py  rigorous.py  sessions.py  subagent.py  verifier.py
garuda/eval/: __init__.py  ablation.py  atif_export.py  costs.py  dashboard.py  harbor_adapter.py  harbor_environment.py
garuda/eval/benchmarks/pdf/: README.md  job.yaml
garuda/eval/benchmarks/spreadsheet/: README.md  job.yaml
garuda/eval/benchmarks/terminal_bench/: README.md  job.yaml
garuda/interfaces/: cli.py  headless.py  jobs.py  main.py  runner.py  server.py  session.py  tui.py
garuda/mcp/: client.py  config.py
garuda/model/: __init__.py  governor.py  litellm_model.py  protocol.py  script_model.py
garuda/observability/: __init__.py  tracing.py
garuda/plugins/: hooks.py
garuda/sdk/: __init__.py  conversation.py  software_agent.py
garuda/skills/: __init__.py  loader.py
garuda/tools/: __init__.py  background.py  bash.py  buffer_tools.py  diagnostics.py  discovery.py  documents.py  edit.py  files.py  goal.py  image_read.py  multi_edit.py  patch.py  project_loader.py  protocol.py  registry.py  search.py  subagent.py  task_complete.py  tmux.py  todo.py  web.py
garuda/workspace/: __init__.py  docker.py  factory.py  local.py  paths.py  protocol.py  remote.py  sandbox.py  sandbox_policy.py  shell.py  tmux.py
tests/: conftest.py  test_ablation.py  test_agent_home.py  test_atif_dashboard.py  test_backlog_interfaces.py  test_backlog_loop_fixes.py  test_backlog_summary.py  test_buffer.py  test_buffer_query.py  test_condenser.py  test_conformance.py  test_context_archive.py  test_core_v2.py  test_diagnostics.py  test_edit_anchored.py  test_goal.py  test_hooks_config.py  test_jobs.py  test_mcp_allowlist.py  test_mcp_config.py  test_mcp_merge_cli.py  test_mcp_transport.py  test_mcp_v2.py  test_model_governor.py  test_multi_edit.py  test_multimodal.py  test_observability.py  test_optimizations_v2.py  test_parallel_tools.py  test_permissions_v2.py  test_persistent_shell.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_project_tools.py  (+22 more)
tests/fixtures/: mcp_echo.json  mcp_echo.yaml  mcp_echo_server.py
