[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garuda-openagent"
version = "1.1.0"
description = "Universal provider-agnostic agent harness for terminal and software engineering tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.50.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
eval = [
    "harbor>=0.16.0",
]
docs = [
    "pypdf>=4.0",
    "openpyxl>=3.1",
]
tui = [
    "rich>=13.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
server = []

[project.scripts]
garuda = "garuda.interfaces.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["garuda*"]

[tool.setuptools.package-data]
garuda = ["agents/defaults/*.yaml", "config/defaults/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
