[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garuda-openagent"
version = "1.1.0"
description = "Universal provider-agnostic agent harness for terminal and software engineering tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # >=1.63: reasoning_effort, thinking param, and assistant thinking_blocks
    # round-trip must exist or extended thinking silently no-ops.
    "litellm>=1.63.0",
    "pyyaml>=6.0",
    # >=1.9: streamablehttp_client / sse_client transports used by mcp/client.py.
    "mcp>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
eval = [
    "harbor>=0.16.0",
]
docs = [
    "pypdf>=4.0",
    "openpyxl>=3.1",
]
tui = [
    "rich>=13.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
server = []

[project.scripts]
garuda = "garuda.interfaces.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["garuda*"]

[tool.setuptools.package-data]
garuda = ["agents/defaults/*.yaml", "agents/defaults/*.md", "config/defaults/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
